force-app/main/default/objects/Vendor_Supplier__c/Vendor_Supplier__c.object-meta.xml
<CustomObject>
    <label>Vendor/Supplier</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors/Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>