force-app/main/default/objects/Vendor_Supplier__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendors/Suppliers</relationshipLabel>
    <relationshipName>Vendors_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>