force-app/main/default/objects/Vendor_Supplier__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Vendors/Suppliers</relationshipLabel>
    <relationshipName>Vendors_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>