force-app/main/default/objects/Vendor_Supplier__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Vendors/Suppliers</relationshipLabel>
    <relationshipName>Vendors_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>